<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snake_calibration</name>
  <version>0.0.1</version>
  <description>Publish sensor readings from Arduino to ROS2 'capa_sensor' topic.</description>
  <maintainer email="wwang153@jhu.edu">Wenpeng Wang</maintainer>
  <maintainer email="jsliu@jhu.edu">Joshua Liu</maintainer>
  <license>MIT</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
